--- a/backend/static/css/styles.css
+++ b/backend/static/css/styles.css
@@ -59,10 +59,14 @@ p {
 } */
 
 @media only screen and (max-width: 450px) {
-  #all_transactions_button{
+  #all_transactions_button {
     font-size: 0.8em;
   }
-  
+
+  #time_period_form {
+    font-size: 0.8em;
+  }
+
   .card-body {
     height: 300px;
   }
