changes made for url reshuffle

--- a/backend/static/css/styles.css
+++ b/backend/static/css/styles.css
@@ -59,6 +59,9 @@ p {
 } */
 
 @media only screen and (max-width: 450px) {
+  #blog_about {
+    display: none;
+  }
   #all_transactions_button {
     font-size: 0.8em;
   }
