--- a/backend/templates/blog/Should_you_invest_in_Real_Estate_in_Dubai.html
+++ b/backend/templates/blog/Should_you_invest_in_Real_Estate_in_Dubai.html
@@ -2,7 +2,7 @@
 
 <div class="container mt-3">
   <div class="row mt-4">
-    <div class="col-7">
+    <div class="col-md-7">
       <div class="mb-2 border-top border-bottom border-3 pt-4 pb-4">
         <h2>Should You Invest in Real Estate in Dubai?</h2>
       </div>
@@ -13,13 +13,10 @@
       />
 
       <p>
-        Since 2020 prices for residential real estate in Dubai have been showing a steady increase
-        and <strong>nearly doubled</strong> from that time.
+        Since 2020 prices for residential real estate in Dubai have been showing a steady increase and <strong>nearly doubled</strong> from
+        that time.
       </p>
-      <p>
-        It’s a well-known fact that residential real estate market in Dubai is cyclical and follows
-        a global economic trend.
-      </p>
+      <p>It’s a well-known fact that residential real estate market in Dubai is cyclical and follows a global economic trend.</p>
       <a href="{% url 'index' %}">
         <img
           src="{% static 'images/posts/should_you_invest_in_real_estate_in_dubai/all_price_dynamics.jpg' %}"
@@ -29,65 +26,60 @@
       </a>
       <p>
         For many people investing in real estate in Dubai can be
-        <strong>a lucrative opportunity</strong>. But is it still a great investment? To keep it
-        simple – let’s dive into a very simple rule: the law of supply and demand.
+        <strong>a lucrative opportunity</strong>. But is it still a great investment? To keep it simple – let’s dive into a very simple
+        rule: the law of supply and demand.
       </p>
       <h3 class="mt-5 mb-3">Demand Side</h3>
       <p>
-        <strong>Dubai’s population keeps increasing.</strong> More people need more shelters and
-        that mostly drives a demand for real estate.
+        <strong>Dubai’s population keeps increasing.</strong> More people need more shelters and that mostly drives a demand for real
+        estate.
       </p>
       <p>
-        Dubai became a home for many people as it emerged to be economic, business and tourism hub.
-        That city offers a rapid opportunity that is being attracted by more people.
+        Dubai became a home for many people as it emerged to be economic, business and tourism hub. That city offers a rapid opportunity
+        that is being attracted by more people.
       </p>
       <p>But will that trend continue? A simple answer – Yes.</p>
       <p>
-        More and more people keep coming to Dubai and its population is expected to reach 5.8
-        million by 2040 (vs nearly 3.7 million as of today) – <strong>50% increase.</strong>
+        More and more people keep coming to Dubai and its population is expected to reach 5.8 million by 2040 (vs nearly 3.7 million as of
+        today) – <strong>50% increase.</strong>
       </p>
       <p>
-        That is a unique feature of Dubia given the fact the population in most of the parts of the
-        world is shrinking (China, Japan, Europe to say as an example).
+        That is a unique feature of Dubia given the fact the population in most of the parts of the world is shrinking (China, Japan, Europe
+        to say as an example).
       </p>
       <h3 class="mt-5 mb-3">Supply Side</h3>
       <p>
-        It’s not a secret that Dubai has been experiencing influx of new residential projects. Well
-        known developers like Emaar, Nakheel, DAMAC continue to launch new projects that never end.
+        It’s not a secret that Dubai has been experiencing influx of new residential projects. Well known developers like Emaar, Nakheel,
+        DAMAC continue to launch new projects that never end.
       </p>
       <p>
-        To make it straight – oversupply may be a clear concern that could lead to price correction.
-        But when it would happen given cyclicality feature of Dubai residential sector?
+        To make it straight – oversupply may be a clear concern that could lead to price correction. But when it would happen given
+        cyclicality feature of Dubai residential sector?
       </p>
       <p><strong>Nobody could predict a future.</strong></p>
       <p>It all comes down to careful selection of residential projects.</p>
       <p>
-        Location, project, property type together with extensive market research – all of these
-        should be taken into a serious consideration.
+        Location, project, property type together with extensive market research – all of these should be taken into a serious
+        consideration.
       </p>
+      <p>At the same time, defining short-term/long-term plans could also protect from downside risk.</p>
       <p>
-        At the same time, defining short-term/long-term plans could also protect from downside risk.
-      </p>
-      <p>
-        <strong>Set your investment goal</strong> with a right horizon and financing terms before
-        making an investment. That would define a success of investment into real estate sector in
-        Dubai.
+        <strong>Set your investment goal</strong> with a right horizon and financing terms before making an investment. That would define a
+        success of investment into real estate sector in Dubai.
       </p>
       <p>
         There is no double that
-        <strong>Dubai continues its pace of being rapid development center</strong> that attracts
-        more and more people.
+        <strong>Dubai continues its pace of being rapid development center</strong> that attracts more and more people.
       </p>
       <p>
-        Like other investment classes all comes to returns and risks. And real estate market in
-        Dubai is no exception. Well-informed strategy with a right selection of real estate project
-        would offer substantial returns with downside protection.
+        Like other investment classes all comes to returns and risks. And real estate market in Dubai is no exception. Well-informed
+        strategy with a right selection of real estate project would offer substantial returns with downside protection.
       </p>
 
       <!-- 
       <img src="{% static 'images/posts/all_price_dynamics.JPG' %}" /> -->
     </div>
-    <div class="col-5">
+    <div id="blog_about" class="col-md-5">
       <div class="mb-5 border-top border-bottom border-3 pt-4 pb-4">
         <h5 class="ps-3">ABOUT</h5>
         <p class="mt-3 ps-3">
