--- a/backend/templates/base/blog.html
+++ b/backend/templates/base/blog.html
@@ -2,7 +2,7 @@
 
 <div class="container mt-3">
   <div class="row mt-4">
-    <div class="col-7">
+    <div class="col-md-7">
       <!--Post 1-->
       <div class="mb-5 border-top border-bottom border-3 pt-4 pb-4">
         <div class="card border-0" id="blog-post">
@@ -99,7 +99,7 @@
       </div>
       <!--POST ENDS-->
     </div>
-    <div class="col-5">
+    <div id="blog_about" class="col-md-5">
       <div class="mb-5 border-top border-bottom border-3 pt-4 pb-4">
         <h5 class="ps-3">ABOUT</h5>
         <p class="mt-3 ps-3">
