--- a/backend/templates/blog/Most_expensive_villas_in_dubai.html
+++ b/backend/templates/blog/Most_expensive_villas_in_dubai.html
@@ -2,7 +2,7 @@
 
 <div class="container mt-3">
   <div class="row mt-4">
-    <div class="col-7">
+    <div class="col-md-7">
       <div class="mb-2 border-top border-bottom border-3 pt-4 pb-4">
         <h2>Window To Luxury: Dubai Most Expensive Villas</h2>
       </div>
@@ -71,7 +71,7 @@
         stability, appeal to high-net-worth individuals, and reputation as a global luxury hub.
       </p>
     </div>
-    <div class="col-5">
+    <div id="blog_about" class="col-md-5">
       <div class="mb-5 border-top border-bottom border-3 pt-4 pb-4">
         <h5 class="ps-3">ABOUT</h5>
         <p class="mt-3 ps-3">
