--- a/backend/templates/base/dashboard.html
+++ b/backend/templates/base/dashboard.html
@@ -203,7 +203,7 @@
     if (url.searchParams.size === 0) {
       $.ajax({
         method: 'GET',
-        url: 'https://www.dxbstates.com/latest_transactions',
+        url: 'http://127.0.0.1:8000/latest_transactions',
         data: {
           master_project: null,
           project_name: null,
@@ -294,7 +294,7 @@
 
     $.ajax({
       method: 'GET',
-      url: 'https://www.dxbstates.com/latest_transactions',
+      url: 'http://127.0.0.1:8000/latest_transactions',
       data: {
         master_project: selectedMasterProject,
         project_name: selectedProjectName,
@@ -369,7 +369,7 @@
 
     $.ajax({
       method: 'GET',
-      url: 'https://www.dxbstates.com/latest_transactions',
+      url: 'http://127.0.0.1:8000/latest_transactions',
       data: {
         master_project: selectedMasterProject,
         project_name: selectedProjectName,
@@ -438,7 +438,7 @@
 
     $.ajax({
       method: 'GET',
-      url: 'https://www.dxbstates.com/latest_transactions',
+      url: 'http://127.0.0.1:8000/latest_transactions',
       data: {
         master_project: selectedMasterProject,
         project_name: selectedProjectName,
@@ -511,7 +511,7 @@
 
     $.ajax({
       method: 'GET',
-      url: 'https://www.dxbstates.com/latest_transactions',
+      url: 'http://127.0.0.1:8000/latest_transactions',
       data: {
         master_project: selectedMasterProject,
         project_name: selectedProjectName,
@@ -578,7 +578,7 @@
 
     $.ajax({
       method: 'GET',
-      url: 'https://www.dxbstates.com/latest_transactions',
+      url: 'http://127.0.0.1:8000/latest_transactions',
       data: {
         master_project: selectedMasterProject,
         project_name: selectedProjectName,
@@ -645,7 +645,7 @@
 
     $.ajax({
       method: 'GET',
-      url: 'https://www.dxbstates.com/latest_transactions',
+      url: 'http://127.0.0.1:8000/latest_transactions',
       data: {
         master_project: selectedMasterProject,
         project_name: selectedProjectName,
