--- a/backend/templates/base/blog.html
+++ b/backend/templates/base/blog.html
@@ -20,13 +20,9 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h3 class="card-title">
-                  <a class="nav-link active" href="{% url 'post_one' %}"
-                    >Should You Invest in Real Estate in Dubai?</a
-                  >
+                  <a class="nav-link active" href="{% url 'post_one' %}">Should You Invest in Real Estate in Dubai?</a>
                 </h3>
-                <p class="card-text">
-                  On the pros and cons of investing in Dubai real estate sector.
-                </p>
+                <p class="card-text">On the pros and cons of investing in Dubai real estate sector.</p>
                 <!-- <p class="card-text">
                 <small class="text-body-secondary">Last updated 3 mins ago</small>
               </p> -->
@@ -41,20 +37,13 @@
           <div class="row g-0">
             <div class="col-md-4">
               <a href="{% url 'post_two' %}">
-                <img
-                  src="{% static 'images/cards/EOMA_Villa.jpg' %}"
-                  class="img-fluid rounded-start"
-                  alt="..."
-                  id="img-card"
-                />
+                <img src="{% static 'images/cards/EOMA_Villa.jpg' %}" class="img-fluid rounded-start" alt="..." id="img-card" />
               </a>
             </div>
             <div class="col-md-8">
               <div class="card-body">
                 <h3 class="card-title">
-                  <a class="nav-link active" href="{% url 'post_two' %}"
-                    >Window To Luxury: Dubai Most Expensive Villas</a
-                  >
+                  <a class="nav-link active" href="{% url 'post_two' %}">Window To Luxury: Dubai Most Expensive Villas</a>
                 </h3>
                 <p class="card-text">Spotlight on Most Expensive Villas in Palm Jumeirah.</p>
                 <!-- <p class="card-text">
@@ -82,13 +71,9 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h3 class="card-title">
-                  <a class="nav-link active" href=""
-                    >Attract Money by Creating Value for a Specific Audience</a
-                  >
+                  <a class="nav-link active" href="">Attract Money by Creating Value for a Specific Audience</a>
                 </h3>
-                <p class="card-text">
-                  The best way to attract money is to create value for a specific audience.
-                </p>
+                <p class="card-text">The best way to attract money is to create value for a specific audience.</p>
                 <!-- <p class="card-text">
                 <small class="text-body-secondary">Last updated 3 mins ago</small>
               </p> -->
@@ -109,7 +94,7 @@
           </span>
         </p>
       </div>
-      <div class="mb-5 border-top border-bottom border-3 pt-4 pb-4">
+      <!-- <div class="mb-5 border-top border-bottom border-3 pt-4 pb-4">
         <h5 class="ps-3">CATEGORIES</h5>
         <select id="categories" class="form-select mt-3 ps-3" aria-label="Default select example">
           <option selected>Open this select menu</option>
@@ -117,7 +102,7 @@
           <option value="2">Two</option>
           <option value="3">Three</option>
         </select>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
