--- a/backend/templates/blog/Most_expensive_villas_in_dubai.html
+++ b/backend/templates/blog/Most_expensive_villas_in_dubai.html
@@ -11,17 +11,15 @@
 
       <p>
         Dubai promises an unparalleled experience of luxury and sophistication.
-        <strong>Marvelous villas</strong> are one of the aspects that prove luxurious status of that
-        city.
+        <strong>Marvelous villas</strong> are one of the aspects that prove luxurious status of that city.
       </p>
       <p>
-        Ultra wealthy people would like to keep their lavish lifestyle unchanged and choose villas
-        that cost astronomical amount of money.
+        Ultra wealthy people would like to keep their lavish lifestyle unchanged and choose villas that cost astronomical amount of money.
       </p>
       <p><strong>2022 was a year of most expensive transactions ever in Dubai.</strong></p>
       <p>
-        Astonishing news firstly came with billionaire Mukesh Ambani who happened to be the mystery
-        buyer of Dubai's most expensive villa ever. The price of that villa turned out to be
+        Astonishing news firstly came with billionaire Mukesh Ambani who happened to be the mystery buyer of Dubai's most expensive villa
+        ever. The price of that villa turned out to be
         <strong>$80 million.</strong>
       </p>
       <p>
@@ -30,8 +28,8 @@
         becoming the most expensive villa in Dubai.
       </p>
       <p>
-        Those two villas are located in symbolic for Dubai location – Palm Jumeirah. Palm Jumeirah
-        is a man-made island shaped like a palm tree.
+        Those two villas are located in symbolic for Dubai location – Palm Jumeirah. Palm Jumeirah is a man-made island shaped like a palm
+        tree.
       </p>
 
       <img
@@ -40,10 +38,9 @@
         alt="Responsive image"
       />
       <p>
-        <strong>Casa Del Sole</strong> is a standout example of ultra-luxurious real estate in
-        Dubai. The villa spans around 60,000 square feet and includes extensive layout with 10
-        luxurious bedrooms and multiple spacious living and dining areas. Multiple amenities such as
-        swimming pools, entertainment, fitness, and outdoor spaces.
+        <strong>Casa Del Sole</strong> is a standout example of ultra-luxurious real estate in Dubai. The villa spans around 60,000 square
+        feet and includes extensive layout with 10 luxurious bedrooms and multiple spacious living and dining areas. Multiple amenities such
+        as swimming pools, entertainment, fitness, and outdoor spaces.
       </p>
       <img
         src="{% static 'images/posts/most_expensive_villas_in_dubai/Casa_Del_Sole.jpg' %}"
@@ -52,12 +49,12 @@
       />
       <p>
         However, the appetite for luxurious villas don’t stop. And
-        <strong>astonishing EOME villas transactions</strong> are examples of continues demand for
-        that. That villas are located in Palm Jumeirah as well.
+        <strong>astonishing EOME villas transactions</strong> are examples of continues demand for that. That villas are located in Palm
+        Jumeirah as well.
       </p>
       <p>
-        EOME villas are expected for handover in Q2 2025. However, nine out of 24 available villas
-        are already sold out. <strong>Two villas were sold for $55 million each.</strong>
+        EOME villas are expected for handover in Q2 2025. However, nine out of 24 available villas are already sold out.
+        <strong>Two villas were sold for $55 million each.</strong>
       </p>
       <a href="{% url 'index' %}">
         <img
@@ -67,8 +64,8 @@
         />
       </a>
       <p>
-        The demand for luxurious villas in Dubai remains strong, fueled by the city’s economic
-        stability, appeal to high-net-worth individuals, and reputation as a global luxury hub.
+        The demand for luxurious villas in Dubai remains strong, fueled by the city’s economic stability, appeal to high-net-worth
+        individuals, and reputation as a global luxury hub.
       </p>
     </div>
     <div id="blog_about" class="col-md-5">
@@ -81,7 +78,7 @@
           </span>
         </p>
       </div>
-      <div class="mb-5 border-top border-bottom border-3 pt-4 pb-4">
+      <!-- <div class="mb-5 border-top border-bottom border-3 pt-4 pb-4">
         <h5 class="ps-3">CATEGORIES</h5>
         <select id="categories" class="form-select mt-3 ps-3" aria-label="Default select example">
           <option selected>Open this select menu</option>
@@ -89,7 +86,7 @@
           <option value="2">Two</option>
           <option value="3">Three</option>
         </select>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
