--- a/backend/templates/blog/Should_you_invest_in_Real_Estate_in_Dubai.html
+++ b/backend/templates/blog/Should_you_invest_in_Real_Estate_in_Dubai.html
@@ -89,7 +89,7 @@
           </span>
         </p>
       </div>
-      <div class="mb-5 border-top border-bottom border-3 pt-4 pb-4">
+      <!-- <div class="mb-5 border-top border-bottom border-3 pt-4 pb-4">
         <h5 class="ps-3">CATEGORIES</h5>
         <select id="categories" class="form-select mt-3 ps-3" aria-label="Default select example">
           <option selected>Open this select menu</option>
@@ -97,7 +97,7 @@
           <option value="2">Two</option>
           <option value="3">Three</option>
         </select>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
