--- a/backend/templates/base/blog.html
+++ b/backend/templates/base/blog.html
@@ -10,7 +10,7 @@
             <div class="col-md-4">
               <a href="{% url 'post_one' %}">
                 <img
-                  src="{% static 'images/cards/Dubai_Sheikh_Zayed_Road.jpg' %}"
+                  src="{% static 'images/cards/dubai_sheikh_zayed_road.jpg' %}"
                   class="img-fluid rounded-start"
                   alt="..."
                   id="img-card"
@@ -37,7 +37,7 @@
           <div class="row g-0">
             <div class="col-md-4">
               <a href="{% url 'post_two' %}">
-                <img src="{% static 'images/cards/EOMA_Villa.jpg' %}" class="img-fluid rounded-start" alt="..." id="img-card" />
+                <img src="{% static 'images/cards/eoma_villa.jpg' %}" class="img-fluid rounded-start" alt="..." id="img-card" />
               </a>
             </div>
             <div class="col-md-8">
