--- a/backend/templates/blog/most_expensive_villas_in_dubai_.html
+++ b/backend/templates/blog/most_expensive_villas_in_dubai_.html
@@ -7,7 +7,7 @@
         <h2>Window To Luxury: Dubai Most Expensive Villas</h2>
       </div>
 
-      <img src="{% static 'images/cards/EOMA_Villa.jpg' %}" class="img-fluid mt-4 mb-5" />
+      <img src="{% static 'images/cards/eoma_villa.jpg' %}" class="img-fluid mt-4 mb-5" />
 
       <p>
         Dubai promises an unparalleled experience of luxury and sophistication.
@@ -43,7 +43,7 @@
         as swimming pools, entertainment, fitness, and outdoor spaces.
       </p>
       <img
-        src="{% static 'images/posts/most_expensive_villas_in_dubai/Casa_Del_Sole.jpg' %}"
+        src="{% static 'images/posts/most_expensive_villas_in_dubai/casa_del_sole.jpg' %}"
         class="img-fluid mt-4 mb-4"
         alt="Responsive image"
       />
@@ -58,7 +58,7 @@
       </p>
       <a href="{% url 'index' %}">
         <img
-          src="{% static 'images/posts/most_expensive_villas_in_dubai/EOME_Palm_Transactions.jpg' %}"
+          src="{% static 'images/posts/most_expensive_villas_in_dubai/eoma_palm_transactions.jpg' %}"
           class="img-fluid mt-4 mb-4"
           alt="Responsive image"
         />
