--- a/backend/templates/blog/should_you_invest_in_real_estate_in_dubai_.html
+++ b/backend/templates/blog/should_you_invest_in_real_estate_in_dubai_.html
@@ -8,7 +8,7 @@
       </div>
 
       <img
-        src="{% static 'images/posts/should_you_invest_in_real_estate_in_dubai/Dubai_Sheikh_Zayed_Road - Small.jpg' %}"
+        src="{% static 'images/posts/should_you_invest_in_real_estate_in_dubai/dubai_sheikh_zayed_road - small.jpg' %}"
         class="img-fluid mt-4 mb-5"
       />
 
